force-app/main/default/objects/Syteline_vendaddr__x/Syteline_vendaddr__x.object-meta.xml
<CustomObject>
    <description>dw_view$syteline_vendaddr</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_view$syteline_vendaddr</externalName>
    <label>Syteline_vendaddr</label>
    <pluralLabel>Syteline_vendaddr</pluralLabel>
</CustomObject>