force-app/main/default/objects/Syteline_vendaddr__x/fields/addr_2__c.field-meta.xml
<CustomField>
    <fullName>addr_2__c</fullName>
    <description>addr_2</description>
    <externalDeveloperName>addr_2</externalDeveloperName>
    <label>Addr_2</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>