force-app/main/default/objects/Syteline_vendaddr__x/fields/addr_3__c.field-meta.xml
<CustomField>
    <fullName>addr_3__c</fullName>
    <description>addr_3</description>
    <externalDeveloperName>addr_3</externalDeveloperName>
    <label>Addr_3</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>