force-app/main/default/objects/Syteline_vendaddr__x/fields/city__c.field-meta.xml
<CustomField>
    <fullName>city__c</fullName>
    <description>city</description>
    <externalDeveloperName>city</externalDeveloperName>
    <label>City</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>