force-app/main/default/objects/Syteline_vendaddr__x/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <description>country</description>
    <externalDeveloperName>country</externalDeveloperName>
    <label>Country</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>