force-app/main/default/objects/Syteline_vendaddr__x/fields/county__c.field-meta.xml
<CustomField>
    <fullName>county__c</fullName>
    <description>county</description>
    <externalDeveloperName>county</externalDeveloperName>
    <label>County</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>