force-app/main/default/objects/Syteline_vendaddr__x/fields/external_email_addr__c.field-meta.xml
<CustomField>
    <fullName>external_email_addr__c</fullName>
    <description>external_email_addr</description>
    <externalDeveloperName>external_email_addr</externalDeveloperName>
    <label>External_email_addr</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>