force-app/main/default/objects/Syteline_vendaddr__x/fields/fax_nbr__c.field-meta.xml
<CustomField>
    <fullName>fax_nbr__c</fullName>
    <description>fax_nbr</description>
    <externalDeveloperName>fax_nbr</externalDeveloperName>
    <label>Fax_nbr</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>