force-app/main/default/objects/Syteline_vendaddr__x/fields/internet_url__c.field-meta.xml
<CustomField>
    <fullName>internet_url__c</fullName>
    <description>internet_url</description>
    <externalDeveloperName>internet_url</externalDeveloperName>
    <label>Internet_url</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>