force-app/main/default/objects/Syteline_vendaddr__x/fields/last_update_ts__c.field-meta.xml
<CustomField>
    <fullName>last_update_ts__c</fullName>
    <description>last_update_ts</description>
    <externalDeveloperName>last_update_ts</externalDeveloperName>
    <label>Last_update_ts</label>
    <type>DateTime</type>
</CustomField>