force-app/main/default/objects/Syteline_vendaddr__x/fields/pay_hold__c.field-meta.xml
<CustomField>
    <fullName>pay_hold__c</fullName>
    <description>pay_hold</description>
    <externalDeveloperName>pay_hold</externalDeveloperName>
    <label>Pay_hold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>