force-app/main/default/objects/Syteline_vendaddr__x/fields/pay_hold_reason__c.field-meta.xml
<CustomField>
    <fullName>pay_hold_reason__c</fullName>
    <description>pay_hold_reason</description>
    <externalDeveloperName>pay_hold_reason</externalDeveloperName>
    <label>Pay_hold_reason</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>