force-app/main/default/objects/Syteline_vendaddr__x/fields/row_seq_nbr__c.field-meta.xml
<CustomField>
    <fullName>row_seq_nbr__c</fullName>
    <description>row_seq_nbr</description>
    <externalDeveloperName>row_seq_nbr</externalDeveloperName>
    <label>Row_seq_nbr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>