force-app/main/default/objects/Syteline_vendaddr__x/fields/state__c.field-meta.xml
<CustomField>
    <fullName>state__c</fullName>
    <description>state</description>
    <externalDeveloperName>state</externalDeveloperName>
    <label>State</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>