force-app/main/default/objects/Syteline_vendaddr__x/fields/user_id__c.field-meta.xml
<CustomField>
    <fullName>user_id__c</fullName>
    <description>user_id</description>
    <externalDeveloperName>user_id</externalDeveloperName>
    <label>User_id</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>