force-app/main/default/objects/Syteline_vendaddr__x/fields/vendor_nm__c.field-meta.xml
<CustomField>
    <fullName>vendor_nm__c</fullName>
    <description>vendor_nm</description>
    <externalDeveloperName>vendor_nm</externalDeveloperName>
    <label>Vendor_nm</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>