force-app/main/default/objects/Syteline_vendaddr__x/fields/zip_cd__c.field-meta.xml
<CustomField>
    <fullName>zip_cd__c</fullName>
    <description>zip_cd</description>
    <externalDeveloperName>zip_cd</externalDeveloperName>
    <label>Zip_cd</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>