force-app/main/default/objects/Syteline_vendaddr__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>id__c</columns>
    <columns>vendor_nbr__c</columns>
    <columns>vendor_nm__c</columns>
    <columns>city__c</columns>
    <columns>state__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>